# seattle-python-401d15

./: README.md
class-01/: README.md
class-01/demos/hello-python/: pyproject.toml
class-01/review/array-reverse/: pyproject.toml
class-01/review/array-reverse/array_reverse/: array_reverse.py
class-01/review/array-reverse/tests/: test_array_reverse.py
class-01/review/snakes-cafe/: pyproject.toml
class-02/: README.md
class-02/demo/fizz-buzz/: pyproject.toml
class-02/demo/recursion/: pyproject.toml
class-03/: README.md
class-03/demos/exceptions/: exceptional.py  pyproject.toml
class-03/demos/file-io/: file_io.py  pyproject.toml
class-03/review/: madlib.py  test_madlib.py
class-04/review/pythonic-garage-band/: pyproject.toml
class-04/review/pythonic-garage-band/pythonic_garage_band/: band.py
class-04/review/pythonic-garage-band/tests/: test_band.py
class-05/: google_doc_notes.txt
class-06/demos/: counter-fun.py
class-07/: WARMUP.md
class-07/demos/: linked-list-insertions.py
class-08/demos/: zipper-starter.py
class-10/demos/stacks_and_queues/: stacks_and_queues.py
class-12/demos/cereal/: cereal.ipynb  pyproject.toml
class-12/numpy-review/: broadcasting.ipynb  pyproject.toml
class-17/demos/tree-fun/: main.py
class-17/review/max-value-in-tree/: pyproject.toml
class-20/: README.md
class-26/: README.md  WARMUP.md
class-26/demos/django-snacks/: db.sqlite3  manage.py  pyproject.toml
class-26/demos/django-snacks/django_snacks_project/: asgi.py  settings.py  urls.py
class-26/demos/django-snacks/snacks/: tests.py  urls.py  views.py
class-26/demos/django-snacks/templates/: about.html  base.html  home.html
class-27/: WARMUP.md
class-27/demos/django-snacks/: db.sqlite3  pyproject.toml
class-28/demos/full-stack-snacks/: db.sqlite3  pyproject.toml
class-28/demos/full-stack-snacks/snacks/: admin.py  models.py  tests.py  urls.py  views.py
class-28/demos/full-stack-snacks/snacks/migrations/: 0001_initial.py
class-28/demos/full-stack-snacks/snacks_project/: settings.py  urls.py
class-28/demos/full-stack-snacks/templates/: base.html  snack-create.html  snack-delete.html  snack-detail.html  snack-list.html  snack-update.html
class-30/demos/hashtable/: hashtable.py  linked_list.py  pyproject.toml  test_hashtable.py
class-31/demo/blogapi/: db.sqlite3  requirements.txt
class-31/demo/snacks-x/: pyproject.toml  requirements.txt
class-31/demo/snacks-x/accounts/migrations/: 0001_initial.py
class-31/demo/snacks-x/config/: settings.py  urls.py
class-31/demo/snacks-x/snacks/: models.py  serializers.py  urls.py  views.py
class-31/demo/snacks-x/snacks/migrations/: 0001_initial.py
class-31/demo/snacks-x/templates/snacks/: snack-create.html  snack-delete.html  snack-detail.html  snack-list.html  snack-update.html
class-32/demos/blogapi-permissions/: db.sqlite3
class-32/demos/blogapi-postgres/: requirements.txt
class-33/demos/snacks-from-scratch/: db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
class-36/demos/: WALK-THROUGH.md
class-36/demos/snacks-from-scratch/: .gitignore  README.md  heroku.yml  pyproject.toml  (+1 more)
class-38/: README.md
class-45/: README.md  test_graph.py
class-46/starter_dsa/: dsa_starter_queue.py  dsa_starter_test.py
reference/game-of-greed/: bots.py
(+57 files in other folders)
